<resources>
    <string name="app_name">GUET课程表</string>
    <string name="monday_title">星期一</string>
    <string name="tuesday_title">星期二</string>
    <string name="wednesday_title">星期三</string>
    <string name="thursday_title">星期四</string>
    <string name="friday_title">星期五</string>
    <string name="saturday_title">星期六</string>
    <string name="sunday_title">星期日</string>
    <string name="time1_title">1,2</string>
    <string name="time2_title">3,4</string>
    <string name="time3_title">5,6</string>
    <string name="time4_title">7,8</string>
    <string name="time5_title">晚</string>

    <string name="sid_tip">　学　　　号　</string>
    <string name="passwd_tip">学分制系统密码</string>
    <string name="vpn_passwd_tip">WebVPN密码</string>
    <string name="checkcode_tip">　验　证　码　</string>

    <string name="sid_fill">1234567890</string>
    <string name="passwd_fill">password</string>
    <string name="checkcode_fill">1234</string>
    <string name="login_head_text">学分制教学管理系统</string>

    <string name="login_btn">登录/同步</string>
    <string name="forget_btn">删除/退出登录</string>
    <string name="picker_ok_btn">确定</string>
    <string name="picker_cancel_btn">取消</string>

    <string name="lan_login_url">http://172.16.13.22/Login/SubmitLogin</string>
    <string name="lan_login_referer">http://172.16.13.22/</string>
    <string name="lan_login_success_contain_response_text">\"success\":true</string>

    <string name="lan_outside_login_url">http://172.16.1.99/student/public/login.asp</string>
    <string name="lan_outside_login_referer">http://172.16.1.99/student/public/login.asp</string>

    <string name="lan_snackbar_login_fail">登录失败, 检查校园网连接后重试</string>
    <string name="lan_snackbar_login_fail_ck">验证码错误，登录失败</string>
    <string name="lan_snackbar_login_fail_pwd">密码错误，登录失败</string>

    <string name="lan_snackbar_vpn_test_login_fail_ip">WebVPN登录验证失败次数过多，请稍后重试</string>
    <string name="lan_snackbar_vpn_test_login_fail">WebVPN登录验证失败</string>
    <string name="lan_snackbar_vpn_test_login_fail_wrong_pwd">WebVPN密码错误</string>
    <string name="lan_snackbar_vpn_test_login_fail_net_error">WebVPN登录验证失败，请检查网络</string>
    <string name="lan_snackbar_outside_test_login_fail">教务网站登录验证失败</string>

    <string name="lan_snackbar_data_updating">登录成功，正在同步数据...请勿离开</string>

    <string name="lan_toast_update_success">数据同步成功！</string>
    <string name="lan_toast_update_fail">数据同步失败！请重试</string>

    <string name="lan_title_login_updating">同步 | 同步中...</string>
    <string name="lan_title_login_updated">同步 | 同步成功</string>
    <string name="lan_title_login_updated_fail">同步 | 请重试</string>

    <string name="lan_extra_password_title">还差一步  😋</string>

    <string name="lan_get_checkcode_url">http://172.16.13.22/login/GetValidateCode?id=0.7117051736083029</string>
    <string name="lan_get_checkcode_referer">http://172.16.13.22/</string>
    <string name="lan_get_person_url">http://172.16.13.22/Student/GetPerson</string>
    <string name="lan_get_person_referer">http://172.16.13.22</string>
    <string name="lan_get_person_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_terms_url">http://172.16.13.22/Comm/GetTerm</string>
    <string name="lan_get_terms_referer">http://172.16.13.22</string>
    <string name="lan_get_terms_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_table_url">http://172.16.13.22/student/getstutable</string>
    <string name="lan_get_table_referer">http://172.16.13.22</string>
    <string name="lan_get_table_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_hours_url">http://172.16.13.22/comm/gethours</string>
    <string name="lan_get_hours_referer">http://172.16.13.22</string>
    <string name="lan_get_hours_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_student_url">http://172.16.13.22/student/StuInfo</string>
    <string name="lan_get_student_referer">http://172.16.13.22</string>
    <string name="lan_get_student_success_contain_response_text">\"name\"</string>
    <string name="lan_get_graduation_score_url">http://172.16.13.22/student/Getyxxf</string>
    <string name="lan_get_graduation_score_referer">http://172.16.13.22</string>
    <string name="lan_get_graduation_score_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_grades_url">http://172.16.13.22/Student/GetStuScore</string>
    <string name="lan_get_grades_referer">http://172.16.13.22/Login/MainDesktop</string>
    <string name="lan_get_grades_success_contain_response_text">\"success\":true</string>

    <string name="wan_get_check_code_url">https://v.guet.edu.cn/http/77726476706e69737468656265737421a1a013d2766626012d46dbfe/login/GetValidateCode?id=0.5018148359674977</string>
    <string name="wan_get_check_code_referer">https://v.guet.edu.cn/http/77726476706e69737468656265737421a1a013d2766626012d46dbfe/</string>
    <string name="wan_vpn_get_ticket_url">https://v.guet.edu.cn/</string>
    <string name="wan_vpn_get_ticket_referer">https://v.guet.edu.cn/</string>
    <string name="wan_vpn_login_url">https://v.guet.edu.cn/do-login</string>
    <string name="wan_vpn_login_referer">https://v.guet.edu.cn/login</string>
    <string name="wan_vpn_login_success_contain_response_text">\"success\": true</string>
    <string name="wan_vpn_login_need_confirm_contain_response_text">\"error\": \"NEED_CONFIRM\"</string>
    <string name="wan_vpn_confirm_login_url">https://v.guet.edu.cn/do-confirm-login</string>
    <string name="wan_vpn_confirm_login_referer">https://v.guet.edu.cn/login</string>
    <string name="wan_vpn_login_ip_forbidden_contain_response_text">\"error\": \"IP_FORBIDDEN\"</string>

    <string name="wan_login_vpn_ip_forbidden_tip">WebVPN验证失败次数过多, 请稍后重试</string>
    <string name="wan_login_vpn_ip_forbidden_exception">fail:WebVPN验证失败次数过多, 请稍后重试</string>
    <string name="wan_login_vpn_relogin_tip">请重新登录</string>
    <string name="wan_login_vpn_network_error_tip">登录失败, 检查网络连接后重试</string>
    <string name="wan_login_vpn_network_error">网络异常</string>
    <string name="wan_login_vpn_network_error_exception">fail:网络异常</string>
    <string name="wan_snackbar_outside_test_login_fail">登录失败 - 教务网站密码不正确</string>
    <string name="wan_snackbar_sys_pwd_login_fail">登录失败 - 学分制系统密码不正确</string>
    <string name="wan_snackbar_vpn_pwd_login_fail">WebVPN验证失败</string>
    <string name="wan_snackbar_unknown_fail">验证失败, 请重试</string>
    <string name="wan_library_getResource_fail">搜索失败, 请重试</string>
    <string name="wan_library_input_null">输入为空</string>
    <string name="wan_library_input_long">输入字数限制为60字</string>
    <string name="wan_library_search_null">没有查询到结果</string>
    <string name="wan_snackbar_unknown_fail_exception">fail:验证失败, 请重试</string>
    <string name="wan_login_vpn_cancel_tip">登录取消</string>

    <string name="wan_vpn_ip_forbidden">ip</string>

    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36</string>

    <string name="cookie_delimiter">"; "</string>
    <string name="ok_btn_text_zhcn">确定</string>
    <string name="deny_btn_zhcn">取消</string>
    <string name="login_fail_ck_title">登录失败 - 验证码错误</string>
    <string name="login_fail_pwd_title">登录失败 - 密码不正确</string>
    <string name="login_fail_other_title">登录失败</string>
    <string name="login_success_title">登录成功</string>
    <string name="login_fail_ck_text">验证码不正确</string>
    <string name="login_fail_pwd_text">用户或密码错误!</string>
    <string name="login_fail_pwd_text_exception">fail:用户名或密码错误!</string>

    <string name="title">课程表</string>
    <string name="title_login">同步</string>
    <string name="Hour_save">保存</string>
    <string name="Hour_restore">重置</string>
    <string name="Hour_List">时间表</string>

    <string name="server_terminfo_datetime_format">yyyy/M/d H:mm:ss</string>
    <string name="ts_datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="server_hours_time_format">H:mm</string>

    <string name="preference_file_name">com.telephone.coursetable.preference</string>
    <string name="preference_file_name_test">com.telephone.coursetable.preference.test</string>

    <string name="pref_hour_start_suffix">S</string>
    <string name="pref_hour_end_suffix">E</string>
    <string name="pref_hour_des_suffix">D</string>
    <string name="pref_hour_start_backup_suffix">SB</string>
    <string name="pref_hour_end_backup_suffix">EB</string>
    <string name="pref_hour_des_backup_suffix">DB</string>

    <string name="no_user_title_suffix">" | 点击登录"</string>
    <string name="updating_user_title_suffix">" | 同步中..."</string>
    <string name="ok_user_title_suffix">同步</string>
    <string name="ok_user_title_prefix">"  "</string>
    <string name="term_vacation">寒假/暑假</string>
    <string name="pref_current_term_key">current_term</string>
    <string name="pref_current_week_key">current_week</string>
    <string name="pref_user_updating_key">updating</string>
    <string name="pref_service_updating_key">service_updating</string>
    <string name="pref_logging_in_key">logging</string>

    <string name="causes">\n　　为了让同学们能够在繁忙的学业中轻松地获取信息。\n　　考试安排，学分成绩，上课安排，常用链接......\n　　小手一点，信息汇聚呈现。\n</string>
    <string name="future">\n　　目前此APP还处于开发/测试阶段，新版本将陆续推出，敬请关注。</string>
    <string name="future2">　　未来预期功能：</string>
    <string name="future3">通过WebVPN自动同步/更新数据\n已选课程查询\n事件提醒\n实验成绩查询\n······\n</string>
    <string name="member">Telephone　</string>
    <string name="member1">　MC土块</string>
    <string name="member2">树獭　</string>
    <string name="member3">　Amaranth</string>
    <string name="more">\n　　本APP由开发人员独立研发完成，与学校官方无关。\n　　如果您对我们的作品有任何宝贵意见(建议)，请联系我们。\n　　Q群号：336405176\n　　GitHub：Telephone2019/CourseTable\n　　码云：Telephone2019/GUET课程表\n\n　👉点击右上角菜单可一键加入交流群\n　🔗点击右上角菜单可浏览代码仓库\n</string>


    <string name="privacy">\n欢迎使用GUET课程表！\n\n希望您仔细阅读此《GUET课程表隐私政策》（以下简称“本政策”），详细了解我们对信息的收集、使用方式，以便您更好地了解我们的服务并作出适当的选择。\n\n若您使用GUET课程表服务，即表示您认同我们在本政策中所述内容。\n\n本政策适用于GUET课程表3.4版本及后续的更高版本。在每次更新本政策内容后，我们都将以APP内弹窗的方式告知您。本政策的更新版本发布时，旧版本政策自动失效。\n\n为了帮助我们更好地了解GUET课程表的运行情况，我们可能会收集相关的统计信息（以下简称“统计信息”），包括：\n　　1. 您所使用的GUET课程表的版本信息\n　　2. 您所使用的GUET课程表的更新日期\n\n我们收集的统计信息不包含您在应用程序中提供的个人身份信息。\n\n在评论功能中，我们提供存储服务。您发表的评论的相关数据（以下简称“评论数据”）将会被加密后存储在我们的服务器中，以确保评论功能的正常运行与您的信息安全。除在评论功能中展示外，我们不会以任何其他方式与任何人（或第三方）分享或向任何人（或第三方）提供您的评论数据。除用于在评论功能中展示外，我们不会将您的评论数据用于任何其他用途。\n\n我们不会收集、存储除统计信息和评论数据外的任何您的信息。只有当您主动发表评论后，我们才会收集、存储您所发表的评论的相关数据。\n\n我们使用各种安全保护措施为您的信息提供相应的安全保障，以防止信息的丢失、泄露、不当使用、未经授权访问或披露，包括但不限于：\n　　·加密技术（例如，TLS、SSL）\n　　·信息匿名化处理\n　　·软件开发守则\n\n若发生信息泄露等安全事件，我们会启动应急预案，阻止安全事件扩大，并以推送通知、公告等形式告知您。\n\n为了避免由不可抗力因素导致的信息泄露（或披露）（以下简称“信息泄露”），我们会在信息泄露即将发生时销毁存储在服务器中的您的信息。\n\n当软件功能完善后，您可以在APP中手动删除存储在我们的服务器中的您的评论数据。在任何时候，如果您想要删除存储在我们的服务器中的您的评论数据，请您联系我们 telephone.tan@qq.com（电子邮件），我们将满足您的请求。\n\nGUET课程表团队\n最后更新于 2020年11月30日12点56分\n</string>
    <string name="privacy_version">1.0</string>
    <string name="privacy_title">\n\nGUET课程表隐私政策（v1.0）</string>
    <string name="privacy_title_no_line">GUET课程表隐私政策（v1.0）</string>


    <string name="title_activity_edit_course_edit">自定义备注</string>
    <string name="title_activity_edit_course_add">添加课程</string>
    <string name="default_mask">X同学</string>
    <string name="update_download_url">https://guet-course-table-apks-1908252323.cos.ap-guangzhou.myqcloud.com/ctb.apk</string>
    <string name="get_cmts_url_s">https://guetcob.com:44334/select</string>
    <string name="put_cmts_url_s">https://guetcob.com:44334/addto</string>
    <string name="get_put_cmts_url_e">cmt</string>
</resources>
