<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:scaleType="fitCenter"
                android:src="@drawable/guet_text_trans" />

            <TextView
                android:id="@+id/aboutus"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="开发初衷 ⏪"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:lineSpacingExtra="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/causes"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="未来蓝图 🔜"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:lineSpacingExtra="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/future"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/future2"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:lineSpacingExtra="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/future3"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="更多✌"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:lineSpacingExtra="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/more"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="作者 ✏\n"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="right"
                    android:text="@string/member"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="center"
                    android:text="|"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="left"
                    android:text="@string/member1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="right"
                    android:text="@string/member2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="center"
                    android:text="|"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:text="@string/member3"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>